--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
     <link rel="stylesheet" href="styles/css/style.css">
+    <script src="https://kit.fontawesome.com/542a943e19.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -26,10 +27,7 @@
 
         <div class="main-bottom">
             <ul class="list">
-                <li>1</li>
-                <li>1</li>
-                <li>1</li>
-                <li>amir hossein</li>
+              
             </ul>
         </div>
 
