--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
             <div class="inp-but">
-                <input type="text" name="todolist" id="todolist">
+                <input type="text" name="todolist" id="todolist" autocomplete="off">
                 <button>add</button>
             </div>
 
@@ -36,5 +36,6 @@
     </div>
     
     <script src="app/script.js"></script>
+    <script src="app/script_1.js"></script>
 </body>
 </html>
